fixed spacing

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -49,7 +49,7 @@ html {
   background-color: rgb(244, 242, 242);
 }
 
-p {
+.paragraph-styling {
   background-color: whitesmoke;
   width: 100%;
   font-size: 0.8rem;
