--- a/src/pages/ESG & Energy/Energy.css
+++ b/src/pages/ESG & Energy/Energy.css
@@ -1,7 +1,8 @@
 .energy-page-bg {
   background-color: black;
-  min-height: 100%;
+  height: 100%;
   color: white;
+  padding-bottom:100px ;
 }
 
 .energy-title-container {
@@ -87,6 +88,7 @@
   font-weight: 500;
   font-size: 20px;
 }
+
 .swim-color {
   color: red;
   background-color: orange;
@@ -95,7 +97,10 @@
   font-size: 100px;
 }
 
-.swimming-icon {
+.para-styles {
+  
+}
+
+.donut-legend {
   color: white;
-  transform: scaleX(-1);
 }
