--- a/src/pages/Plant-walls/plants.css
+++ b/src/pages/Plant-walls/plants.css
@@ -46,7 +46,7 @@
     background-color: rgb(244, 242, 242);
   }
   
-  p {
+  para-card-styling {
     background-color: whitesmoke;
     width: 100%;
     font-size: 0.8rem;
