--- a/src/pages/locations/locations.css
+++ b/src/pages/locations/locations.css
@@ -48,7 +48,7 @@ html {
   background-color: rgb(244, 242, 242);
 }
 
-p {
+paragraph-card-styling {
   background-color: whitesmoke;
   width: 100%;
   font-size: 0.8rem;
